--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,34 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Empowering Tech Companies to Reach New Heights: Level Up Tech Studios!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="web development, software development, Next.js, React, mobile app development, technology solutions"
+    />
+    <meta name="author" content="LUTS" />
+    <meta name="og:title" content="LUTS | LevelUpTechStudios" />
+    <meta
+      name="og:description"
+      content="Empowering Tech Companies to Reach New Heights: Level Up Tech Studios!"
+    />
+
+    <meta name="og:url" content="https://www.leveluptechstudios.com/" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/luts192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-  crossorigin="anonymous"
-/>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script src="https://assets.calendly.com/assets/external/widget.js"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LUTS | LevelUpTechStudios</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
